--- a/Beginner_3/10. Defining and Calling Functions.ipynb
+++ b/Beginner_3/10. Defining and Calling Functions.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `fib` function is defined above. Now let's call this function. Calling a function is simple."
+    "The __`fib()`__ function is defined above. Now let's call this function. Calling a function is simple."
    ]
   },
   {
@@ -50,7 +50,7 @@
    "source": [
     "## 10.2 Positional Arguments\n",
     "\n",
-    "The function requires a positional argument: 'n'. This is a good time to mention that naming things descriptively really helps. Coupled with Python's helpful error messages, descriptive variable, function, and class names make it easy to understand and debug errors. In this case, 'n' is a number. Specifically, this function returns a fibonacci sequence for as long as the numbers in the squence are less than the given max number.\n",
+    "The function requires a positional argument: \"__`n`__\". This is a good time to mention that naming things descriptively really helps. Coupled with Python's helpful error messages, descriptive variable, function, and class names make it easy to understand and debug errors. In this case, 'n' is a number. Specifically, this function returns a fibonacci sequence for as long as the numbers in the squence are less than the given max number.\n",
     "\n",
     "Let's give it a better name and then call the function properly."
    ]
