--- a/Beginner_3/7. Loops and Iteration.ipynb
+++ b/Beginner_3/7. Loops and Iteration.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7.1 While\n",
+    "## 7.1 [While](https://docs.python.org/3.5/reference/compound_stmts.html#while)\n",
     "\n",
-    "The [`while`](https://docs.python.org/3.5/reference/compound_stmts.html#while) statement will loop for as long as the condition is true."
+    "The `while` statement will loop for as long as the condition is true."
    ]
   },
   {
@@ -27,9 +27,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7.2 For\n",
+    "## 7.2 [For](https://docs.python.org/3.5/tutorial/controlflow.html#for-statements)\n",
     "\n",
-    "The [`for`](https://docs.python.org/3.5/tutorial/controlflow.html#for-statements) statement sequentially iterates over a list, string, set or any iterable."
+    "The `for` statement sequentially iterates over a list, string, set or any iterable."
    ]
   },
   {
@@ -50,9 +50,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7.2.1 range()\n",
+    "### 7.2.1 [range()](https://docs.python.org/3.5/library/stdtypes.html#range)\n",
     "\n",
-    "If you need to iterate over a sequence of numbers, the built-in function [`range()`](https://docs.python.org/3.5/library/stdtypes.html#range) can generate arithmetic progressions:"
+    "If you need to iterate over a sequence of numbers, the built-in function `range()` can generate arithmetic progressions:"
    ]
   },
   {
@@ -111,9 +111,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7.2.2 enumerate()\n",
+    "### 7.2.2 [enumerate()](https://docs.python.org/3.5/library/functions.html#enumerate)\n",
     "\n",
-    "When looping through a sequence, the position index and corresponding value can be retrieved at the same time using the [`enumerate()`](https://docs.python.org/3.5/library/functions.html#enumerate) function."
+    "When looping through a sequence, the position index and corresponding value can be retrieved at the same time using the `enumerate()` function."
    ]
   },
   {
