--- a/Beginner_3/8. Conditional Statements and Expressions.ipynb
+++ b/Beginner_3/8. Conditional Statements and Expressions.ipynb
@@ -138,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8.3 `==` vs `is`, [`None`](https://docs.python.org/3.5/library/constants.html#None)\n",
+    "## 8.3 `==` vs `is`, and [`None`](https://docs.python.org/3.5/library/constants.html#None)\n",
     "\n",
     "`==` checks for value equality.\n",
     "\n",
