--- a/Beginner_3/9. Exception Handling.ipynb
+++ b/Beginner_3/9. Exception Handling.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9.1 Try\n",
+    "## 9.1 [Try](https://docs.python.org/3.5/reference/compound_stmts.html#try)\n",
     "\n",
-    "Even if the syntax is correct, a line of code may still produce an error. It doesn't mean the code wouldn't work. Python's [`try`](https://docs.python.org/3.5/reference/compound_stmts.html#try) statement is used to handle [Exceptions](https://docs.python.org/3.5/reference/executionmodel.html#exceptions) detected during execution."
+    "Even if the syntax is correct, a line of code may still produce an error. It doesn't mean the code wouldn't work. Python's `try` statement is used to handle [Exceptions](https://docs.python.org/3.5/reference/executionmodel.html#exceptions) detected during execution."
    ]
   },
   {
@@ -32,9 +32,9 @@
     "\n",
     "The `except` clause allows you to specify exception handlers. Followed by an Exception class, it allows you to catch specific exceptions and control how each is handled. The exception class can be aliased using the `as` keyword followed by a variable for storage and use in the next block of statements.\n",
     "\n",
-    "### 9.2.1 Exception Classes\n",
+    "### 9.2.1 [Exception Classes](https://docs.python.org/3.5/library/exceptions.html#bltin-exceptions)\n",
     "\n",
-    "Python has [built-in Exception classes](https://docs.python.org/3.5/library/exceptions.html#bltin-exceptions) that you can catch with `except`. Multiple except clauses can be used. New exceptions can even be created easily."
+    "Python has built-in Exception classes that you can catch with `except`. Multiple except clauses can be used. New exceptions can even be created easily."
    ]
   },
   {
