--- a/Intermediate_1/12. Basics of OOP in Python.ipynb
+++ b/Intermediate_1/12. Basics of OOP in Python.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "Python classes inherit from the built-in `object`.\n",
     "\n",
-    "Let's create an empty class named YourClass:"
+    "Let's create an empty class named `YourClass`:"
    ]
   },
   {
@@ -76,13 +76,25 @@
    "source": [
     "### 12.1.1 [Old and New Style Classes](https://wiki.python.org/moin/NewClassVsClassicClass)\n",
     "\n",
-    "The example above is the new and recommended way of creating classes. You might encounter another way of defining classes without deriving from the built-in object:\n",
-    "\n",
-    "```\n",
+    "The example above is the new and recommended way of creating classes. You might encounter another way of defining classes without deriving from the built-in object:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "class AClass:\n",
-    "    pass\n",
-    "```\n",
-    "\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This is the old style of defining classes. We'll focus on the new style and learn about the old style just so you're aware if ever you encounter it."
    ]
   },
@@ -110,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's see what the dir() function returns."
+    "Let's see what the `dir()` function returns."
    ]
   },
   {
@@ -374,9 +386,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 12.4 Method Resolution Order\n",
+    "## 12.4 [Method Resolution Order](https://docs.python.org/3.5/glossary.html#term-method-resolution-order)\n",
     "\n",
-    "Since MyClass is derived from YourClass, note the [__method resolution order__](https://docs.python.org/3.5/glossary.html#term-method-resolution-order) section of `help()`. Method resolution order or MRO determines how our object will look for information. Let's say my class derives from a tall heirarchy of other classes and/or from multiple inheritances, with some overrides along the way in different places, the MRO algorithm can give us a stable and consistent order of classes for looking up attributes."
+    "Since `MyClass` is derived from `YourClass`, note the __method resolution order__ section of `help()`. Method resolution order or MRO determines how our object will look for information. Let's say my class derives from a tall chain of classes and/or from multiple inheritances, with some overrides along the way in different places, the MRO algorithm can give us a stable and consistent order of classes for looking up attributes."
    ]
   },
   {
@@ -398,7 +410,7 @@
     "\n",
     "In Python, it's possible to do multiple inheritance.\n",
     "\n",
-    "The new class inherits from all derived classes, from left to right, subject to the method resolution order. The MRO uses a linearization algorithm that is stable and consistent.\n",
+    "The new class inherits from all derived classes, __from left to right__, subject to the method resolution order. The MRO uses a linearization algorithm that is stable and consistent.\n",
     "\n",
     "The importance of the method resolution order becomes more apparent when dealing with multiple inheritance as well as when using of the super() function.\n",
     "\n",
@@ -501,7 +513,7 @@
    "source": [
     "## 12.6 Super\n",
     "\n",
-    "There are times when we want to access the class ancestor's attributes. We might want to maintain the original functionality but modify it just a bit, but not rewrite the code. The super() function allows us to do exactly this. Consider the next example."
+    "There are times when we want to access the class ancestor's attributes. We might want to maintain the original functionality but modify it just a bit, but not rewrite the code. The super() function allows us to do exactly this. Consider the next example:"
    ]
   },
   {
