--- a/Intermediate_1/13. Importing Modules.ipynb
+++ b/Intermediate_1/13. Importing Modules.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 13.1 Python's Import System\n",
     "\n",
-    "Python has an import module that allows you to access code that is external, relative to your script. There are various ways of importing but the most common way is via the `import` statement. Python's import system can get deep and it's more than what we need but [the documentation](https://docs.python.org/3.5/reference/import.html) is a good source if you want to learn more.\n",
+    "Python has an import module that allows you to access code that is external, relative to your script. There are various ways of importing but the most common way is via the __`import`__ statement. Python's import system can get deep and it's more than what we need but [the documentation](https://docs.python.org/3.5/reference/import.html) is a good source if you want to learn more.\n",
     "\n",
     "Now is a good time to make a distinction between packages and modules. To quote the documentation and reference:\n",
     "\n",
@@ -272,25 +272,56 @@
    "source": [
     "## 13.1.4 [Multiple Imports](https://www.python.org/dev/peps/pep-0328/)\n",
     "\n",
-    "If you had to import multiple times from a single module, that can also be done in one line with the syntax:\n",
-    "\n",
-    "```\n",
-    "from os import environ, path\n",
-    "```\n",
-    "\n",
-    "Lines can be broken in Python by putting a backslash `\\ ` at the end of a line and the code can continue on the next line with indentation:\n",
-    "\n",
-    "```\n",
+    "If you had to import multiple times from a single module, that can also be done in one line with the syntax:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from os import environ, path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lines can be broken in Python by putting a backslash `\\ ` at the end of a line and the code can continue on the next line with indentation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "from os import environ, kill, path, urandom, wait, \\\n",
-    "     walk, ...\n",
-    "```\n",
-    "\n",
-    "The same can be achieved by enclosing them in a parenthesis, the standard grouping mechanism in Python. This is the recommended way to import when it reaches multiple lines:\n",
-    "\n",
-    "```\n",
+    "     walk, ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The same can be achieved by enclosing them in a parenthesis, the standard grouping mechanism in Python. This is the recommended way to import when it reaches multiple lines:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "from os import (environ, kill, path, urandom, wait,\n",
-    "     walk, ...)\n",
-    "```\n"
+    "     walk, ...)"
    ]
   },
   {
@@ -580,15 +611,6 @@
     "\n",
     "print(r.content.decode('utf8'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
