added info on brackets - accessing a value and slicing

--- a/Beginner_1/4. Operators and Delimiters.ipynb
+++ b/Beginner_1/4. Operators and Delimiters.ipynb
@@ -858,19 +858,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 2\n",
     "b = 2\n",
@@ -1010,25 +1002,31 @@
    "source": [
     "## 4.2.1 `[ ]` (brackets)\n",
     "\n",
-    "These represent __lists__ when it contains a series of values, or a __list comprehension__ when it contains an expression."
+    "These represent __lists__ when it contains a series of values, or a __list comprehension__ when it contains an expression.\n",
+    "\n",
+    "When found immediately after certain data types and it contains an integer, it means data is being accessed at that index (__`array[index]`__). When this data is an iterable, it could also represent a slicing operation. Slicing takes in several parameters: start, stop, and an optional end. (__`iterable[start:stop[:end]]`__)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "a = [1, 2, 3, 4]\n",
+    "a = [1, 2, 3, 4]  # list\n",
     "\n",
     "b = [  # these can be split up to multiple lines\n",
     "    1,\n",
     "    2,\n",
     "    3,\n",
     "    4,\n",
-    "]"
+    "]\n",
+    "\n",
+    "a[0]  # value at list index 0 is being accessed\n",
+    "\n",
+    "a[::-1]  # list is sliced with a negative step, it's another way to reverse it"
    ]
   },
   {
