added note on comprehensive info

--- a/Beginner_1/4. Operators and Delimiters.ipynb
+++ b/Beginner_1/4. Operators and Delimiters.ipynb
@@ -184,13 +184,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 4.1.2 Assignment Operators\n",
     "\n",
     "\n",
@@ -238,13 +231,6 @@
     "# Write your code below\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "   "
    ]
   },
   {
@@ -603,13 +589,6 @@
     "# Write your code below\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " "
    ]
   },
   {
@@ -977,20 +956,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# 4.2 [Delimiters](https://docs.python.org/3.5/reference/lexical_analysis.html#delimiters)\n",
     "\n",
     "You'll also encounter a lot of delimiters in Python. One delimiter you won't see a lot is the semicolon (`;`). The line delimiter is completely optional in Python. Each data type has its own delimiter and these delimiters can be found in other places. Let's look at what some common delimiters mean."
@@ -1107,6 +1072,13 @@
     "    def method(self):\n",
     "        \"\"\"Method docstring\"\"\"\n",
     "        pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is not an exhaustive list. The documentation will contain a comprehensive information on operators and delimiters."
    ]
   }
  ],
