Changed dash to colon

--- a/Beginner_1/1. Introspection.ipynb
+++ b/Beginner_1/1. Introspection.ipynb
@@ -10,7 +10,7 @@
     ">Python's support for introspection runs deep and wide throughout the language. In fact, it would be hard to imagine Python without its introspection features.\n",
     "\n",
     "## 1.1 Starting the Python interpreter in interactive mode\n",
-    "Just go to the terminal and type <b>`python`</b> and you will see the Python promt (<b> `>>>` </b>) and the Python version that you are currently using −\n",
+    "Just go to the terminal and type <b>`python`</b> and you will see the Python promt (<b> `>>>` </b>) and the Python version that you are currently using:\n",
     "\n",
     "![Beginner_1](./images/img_python_prompt.png)"
    ]
@@ -24,7 +24,7 @@
     "\n",
     "Let's start by asking for help. You may type <b>`help()`</b> without specifying an argument, the interactive help system starts on the interpreter console.\n",
     "\n",
-    "For example −\n",
+    "For example:\n",
     "![Beginner_1](./images/img_help.png)"
    ]
   },
