--- a/Beginner_1/2. Syntax.ipynb
+++ b/Beginner_1/2. Syntax.ipynb
@@ -133,7 +133,7 @@
     "## 2.2 Indentation\n",
     "Python provides no braces to indicate blocks of code for class and function definitions or flow control. Python programs get structured through indentation, i.e. code blocks are defined by their indentation. \n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -183,7 +183,7 @@
     "\n",
     "We will get this error everytime our indentation is off. \n",
     "\n",
-    "Make sure to indent the codes with four spaces like this −"
+    "Make sure to indent the codes with four spaces like this:"
    ]
   },
   {
@@ -219,7 +219,7 @@
     "### 2.3.1 Single-line comments\n",
     "Single-line comments begin with the hash character (<b> ```#```</b> ) and are terminated by\n",
     "the end of line. Python is ignoring all text that comes after the # to the end of the line, \n",
-    "they are not part of the command.  For example − "
+    "they are not part of the command.  For example:"
    ]
   },
   {
@@ -284,7 +284,7 @@
     "\n",
     "From the term itself, these are statements within a single line.\n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -320,7 +320,7 @@
     "\n",
     "Statements in Python typically end with a new line. Python does, however, allow the use of the line continuation character (\\) to denote that the line should continue. \n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -343,7 +343,7 @@
     "\n",
     "Statements contained within the ```[ ]```, ```{ }```, or ```( )``` do not need to use the line continuation character.\n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
