Changed dash to colon

--- a/Beginner_2/6.1 Built-in Standard Data Types - Booleans.ipynb
+++ b/Beginner_2/6.1 Built-in Standard Data Types - Booleans.ipynb
@@ -11,7 +11,7 @@
     "In numeric contexts (for example, when used as the argument to an\n",
     "arithmetic operator), they behave like the integers 0 and 1, respectively.\n",
     "\n",
-    "You can use variables to store booleans like this −"
+    "You can use variables to store booleans like this:"
    ]
   },
   {
