--- a/Beginner_2/6.5 Built-in Standard Data Types - Tuples.ipynb
+++ b/Beginner_2/6.5 Built-in Standard Data Types - Tuples.ipynb
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To write a tuple containing a single value you have to include a comma, even though there is only one value −"
+    "To write a tuple containing a single value you have to include a comma, even though there is only one value:"
    ]
   },
   {
