--- a/Intermediate_2/14. Web Development Framework - Flask.ipynb
+++ b/Intermediate_2/14. Web Development Framework - Flask.ipynb
@@ -342,54 +342,7 @@
    "source": [
     "## Other Flask functions\n",
     "\n",
-    "There are other functions available to import from Flask. We'll use some of them later but for now, these are some of the common ones.\n",
-    "\n",
-    "We made a template appear on the screen and you've seen how common Flask functions work. We'll go deeper into templates in the next notebook."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "%load templates/hello.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Templates\n",
-    "\n",
-    "Looking at the template's source code, it seems like normal HTML interspersed with odd braces that contain {% logic %} or {{ variables }}. Have a closer look at it. The template language is similar to Python. We didn't use the Jinja2 module in our code directly since Flask also takes care of this for us. We can now focus on learning the template language to create pages."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# %load templates/hello.html\n",
-    "<!doctype html>\n",
-    "<title>Hello from Flask</title>\n",
-    "\n",
-    "{% if name %}\n",
-    "\n",
-    "  <marquee><h1>Hello {{ name }}!</h1></marquee>\n",
-    "  <p>Marquee ftw!</p>\n",
-    "  <small>Do not do this!</small>\n",
-    "\n",
-    "{% else %}\n",
-    "\n",
-    "  <h1>Hello World!</h1>\n",
-    "\n",
-    "{% endif %}"
+    "There are other functions available to import from Flask. We'll use some of them later but for now, these are some of the common ones."
    ]
   }
  ],
