Minor changes on notebook format

--- a/Beginner_1/2. Syntax.ipynb
+++ b/Beginner_1/2. Syntax.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Syntax"
+    "# 2. Coding Style"
    ]
   },
   {
@@ -364,23 +364,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.6 pep8"
+    "## 2.6 PEP 8"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a style-guide for Python code.\n",
+    "PEP 8 is the official style guide for Python.\n",
     "\n",
-    "For the pep8 official documentation, please check this [link](https://www.python.org/dev/peps/pep-0008/)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "    "
+    "For the PEP 8 official documentation, please check this [link](https://www.python.org/dev/peps/pep-0008/)\n"
    ]
   }
  ],
