--- a/Beginner_1/4. Operators and Delimiters.ipynb
+++ b/Beginner_1/4. Operators and Delimiters.ipynb
@@ -70,7 +70,7 @@
    "source": [
     "### ( `*` ) multiplication\n",
     "\n",
-    "Multiplies values on either side of the operator"
+    "Multiplies values on either side of the operator."
    ]
   },
   {
@@ -94,7 +94,7 @@
    "source": [
     "### ( `/` ) division\n",
     "\n",
-    "Divides left hand operand by right hand operand"
+    "Divides left hand operand by right hand operand."
    ]
   },
   {
@@ -110,6 +110,30 @@
     "\n",
     "my_quotient = a / b\n",
     "print(my_quotient)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ( `//` ) floor division\n",
+    "\n",
+    "Also known as the ___integer division___. The division of operands will result to a quotient in which the digits after the decimal point are __removed__."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = 10.25\n",
+    "b = 2\n",
+    "\n",
+    "my_floor_division = (a // b)\n",
+    "print(my_floor_division)"
    ]
   },
   {
@@ -134,28 +158,6 @@
     "\n",
     "my_modulus = a % b\n",
     "print(my_modulus)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### ( `//` ) floor division\n",
-    "\n",
-    "Also known as the ___integer division___. The division of operands will result to a quotient in which the digits after the decimal point are __removed__."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "a = 10.25\n",
-    "b = 2\n",
-    "\n",
-    "my_floor_division = (a // b)\n",
-    "print(my_floor_division)"
    ]
   },
   {
@@ -436,7 +438,7 @@
     "c /= a\n",
     "\n",
     "# Write your code below\n",
-    "\n",
+    "print(c)\n",
     "\n"
    ]
   },
