Added some exercises

--- a/Beginner_2/5. Built-in Functions.ipynb
+++ b/Beginner_2/5. Built-in Functions.ipynb
@@ -30,7 +30,8 @@
    },
    "outputs": [],
    "source": [
-    "input('Enter your name: ')"
+    "name = input(\"What is your name? \")\n",
+    "print(\"You are \" + name)"
    ]
   },
   {
@@ -89,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A print call is ended by a newline:"
+    "A <b>`print`</b> call is ended by a newline:"
    ]
   },
   {
@@ -108,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To change this behaviour, we can assign an arbitrary string to the keyword parameter \"end\". This string will be used for ending the output of the values of a print call:"
+    "To change this behaviour, we can assign an arbitrary string to the keyword parameter '<b>`end`</b>'. This string will be used for ending the output of the values of a <b>`print`</b> call:"
    ]
   },
   {
@@ -187,9 +188,10 @@
    },
    "outputs": [],
    "source": [
+    "#Run the code\n",
     "x = \"100\"\n",
     "\n",
-    "print(type(x)) #Run the code"
+    "print(type(x)) "
    ]
   },
   {
@@ -209,7 +211,7 @@
    "source": [
     "x = \"100\"\n",
     "\n",
-    "y = int(x) # We used the int() function to convert \"100\" which is a string into an integer.\n",
+    "y = int(x) # We used the int() function to convert the string \"100\" into an integer.\n",
     "\n",
     "print(type(y))"
    ]
