--- a/Beginner_2/6 Variables.ipynb
+++ b/Beginner_2/6 Variables.ipynb
@@ -67,7 +67,7 @@
     "\n",
     "- (b) The remainder of your variable name may consist of letters, numbers, and underscores.\n",
     "    - password\n",
-    "    - var1\n",
+    "    - variable1\n",
     "    - first_name\n",
     "\n",
     "\n",
@@ -75,6 +75,17 @@
     "    - case_sensitive\n",
     "    - CASE_SENSITIVE\n",
     "    - case_Sensitive "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>NOTE</b>: Avoid abbreviating variable names.\n",
+    "\n",
+    "> When you see a variable called <b>`balance_sheet_decrease`</b>, it’s much easier to interpret in your mind than an abbreviated variable like <b>`bsd`</b> or <b>`bal_s_d`</b>.\n",
+    "\n",
+    ">These types of shortcuts may save a few seconds of typing, but that savings comes at the expense of hours or days of technical debt. It’s not worth it."
    ]
   },
   {
@@ -108,6 +119,9 @@
    "metadata": {},
    "source": [
     "## 6.3 Naming Conventions\n",
+    "\n",
+    ">Understandable code frees mental bandwidth from having to puzzle out inconsistencies, making it easier to maintain and enhance projects of all sizes.\n",
+    "\n",
     "\n",
     "1. Readability is very important.\n",
     "2. Descriptive names are very useful\n",
@@ -444,6 +458,7 @@
    },
    "outputs": [],
    "source": [
+    "# Run the code\n",
     "tuple = ('abcd', 786 , 2.23, 'john', 70.2)\n",
     "tinytuple = (123, 'john')\n",
     "\n",
@@ -481,6 +496,7 @@
    },
    "outputs": [],
    "source": [
+    "# Run the code\n",
     "dict = {}\n",
     "dict['one'] = \"This is one\"\n",
     "dict[2] = \"This is two\"\n",
@@ -500,7 +516,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dictionaries have no concept of order among elements. It is incorrect to say that the elements are \"out of order\"; they are simply unordered."
+    "Dictionaries have <b>no concept of order</b> among elements. It is incorrect to say that the elements are \"out of order\"; they are simply unordered."
    ]
   }
  ],
