--- a/Beginner_2/6.3 Built-in Standard Data Types - Strings.ipynb
+++ b/Beginner_2/6.3 Built-in Standard Data Types - Strings.ipynb
@@ -219,20 +219,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello, world!\n",
-      "hello, world!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# using .lower()\n",
     "\n",
@@ -450,6 +441,58 @@
     "\n",
     "#New\n",
     "print('{} {}'.format('one', 'two'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercises\n",
+    "\n",
+    "<b> (1) <b> Count all the vowels, uppercase and lowercase in this sentence and print the result:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "sentence = \"The quick brown fox jumps over the lazy dog\"\n",
+    "\n",
+    "# Write your code below:\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>(2) Convert the sentence in all uppercase letters and print the result.\n",
+    "\n",
+    "(3) Convert the same sentence in all lowercase letters and print the result.</b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "sentence = \"i LoVe PyThOn sO MuCh.\"\n",
+    "\n",
+    "#Write your code below:\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
