--- a/Beginner_2/6.4 Built-in Standard Data Types - Lists .ipynb
+++ b/Beginner_2/6.4 Built-in Standard Data Types - Lists .ipynb
@@ -245,6 +245,7 @@
    "source": [
     "# Specifying start at the beginning and end at the second element\n",
     "\n",
+    "x = ['P', 'y', 't', 'h', 'o','n']\n",
     "print(x[:2])"
    ]
   },
@@ -258,6 +259,7 @@
    "source": [
     "# Specifying start at the next to last element and go to the end\n",
     "\n",
+    "x = ['P', 'y', 't', 'h', 'o','n']\n",
     "print(x[-2:])"
    ]
   },
@@ -271,6 +273,7 @@
    "source": [
     "# Specifying start at the beginning and go to the next to last element\n",
     "\n",
+    "x = ['P', 'y', 't', 'h', 'o','n']\n",
     "print(x[:-1])"
    ]
   },
@@ -292,7 +295,6 @@
     "# Specifying a step argument returns every n-th item\n",
     "\n",
     "x = ['P', 'y', 't', 'h', 'o','n']\n",
-    "\n",
     "print(x[::2])"
    ]
   },
@@ -314,8 +316,77 @@
     "# Return a reversed version of the list ( or string )\n",
     "\n",
     "x = ['P', 'y', 't', 'h', 'o','n']\n",
-    "\n",
     "print(x[::-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise\n",
+    "\n",
+    "<b>(1) Display Apple, Banana, and Orange </b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fruits = [\"Grapes\", \"Apple\", \"Banana\", \"Orange\", \"Melon\"]\n",
+    "\n",
+    "#Write your code below\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>(2) Display the list in its reverse order </b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fruits = [\"Grapes\", \"Apple\", \"Banana\", \"Orange\", \"Melon\"]\n",
+    "\n",
+    "#Write your code below\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>(3) Add one more fruit of your choice on the list and display all of them </b>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fruits = [\"Grapes\", \"Apple\", \"Banana\", \"Orange\", \"Melon\"]\n",
+    "\n",
+    "#Write your code below\n",
+    "\n",
+    "\n"
    ]
   }
  ],
