--- a/Intermediate_2/15. Web Development Template Engine - Jinja2.ipynb
+++ b/Intermediate_2/15. Web Development Template Engine - Jinja2.ipynb
@@ -188,7 +188,7 @@
     "\n",
     "There are a couple of things here. We have two templates, `base.html` and `index.html`. In both templates, we have __`{% block %}`__ tags with their own names. Our child template, `index.html`, has an __`{% extends %}`__ tag. This tells Flask to look for the template with the specified name first, in this case, `base.html`, and that this template is an extension of that one. This is where the named __`{% blocks %}`__ come in. The content of the child template's block tags go into the base template's block tags with the same name. The child template inherits from the base template and fills in the blocks.\n",
     "\n",
-    "## Include\n",
+    "## [Include](http://jinja.pocoo.org/docs/dev/templates/#include)\n",
     "\n",
     "Another way to make a template reusable is to write the component in a separate file. This will __not__ use __`{% extend %}`__. Instead, the __`{% include %}`__ tag can be used in any other template. The specified template will be inserted into that template and have access to the variables within the current template's scope."
    ]
@@ -200,6 +200,37 @@
    },
    "source": [
     "# Control Structures\n",
+    "\n",
+    "Control structures are also available in the template langugage. These tags allow you to create assignments, apply filters, use loops and conditionals, even macros, among other things. It's still works mostly like Python but with some adjustments.\n",
+    "\n",
+    "## [Assignment](http://jinja.pocoo.org/docs/dev/templates/#assignments) - `{% set %}`\n",
+    "\n",
+    "\n",
+    "> _Inside code blocks, you can also assign values to variables. Assignments at top level (outside of blocks, macros or loops) are exported from the template like top level macros and can be imported by other templates._\n",
+    "\n",
+    "> _Assignments use the set tag and can have multiple targets:_\n",
+    "\n",
+    "```\n",
+    "{% set navigation = [('index.html', 'Index'), ('about.html', 'About')] %}\n",
+    "{% set key, value = call_something() %}\n",
+    "```\n",
+    "\n",
+    "## [Filters](http://jinja.pocoo.org/docs/dev/templates/#id11) - `{% filter %}`\n",
+    "\n",
+    "> _Filter sections allow you to apply regular Jinja2 filters on a block of template data. Just wrap the code in the special filter section:_\n",
+    "\n",
+    "```\n",
+    "{% filter upper %}\n",
+    "    This text becomes uppercase\n",
+    "{% endfilter %}\n",
+    "```\n",
+    "\n",
+    "## [Loops](http://jinja.pocoo.org/docs/dev/templates/#for) - `{% for %}`\n",
+    "\n",
+    "Template loops are pretty much similar to Python loops\n",
+    "\n",
+    "## [Conditionals](http://jinja.pocoo.org/docs/dev/templates/#if) - `{% if %}`\n",
+    "\n",
     "\n"
    ]
   },
