done template tags

--- a/Intermediate_2/15. Web Development Template Engine - Jinja2.ipynb
+++ b/Intermediate_2/15. Web Development Template Engine - Jinja2.ipynb
@@ -225,23 +225,56 @@
     "{% endfilter %}\n",
     "```\n",
     "\n",
-    "## [Loops](http://jinja.pocoo.org/docs/dev/templates/#for) - `{% for %}`\n",
-    "\n",
-    "Template loops are pretty much similar to Python loops\n",
-    "\n",
     "## [Conditionals](http://jinja.pocoo.org/docs/dev/templates/#if) - `{% if %}`\n",
     "\n",
-    "\n"
+    "Template conditionals are also similar to Python conditionals:\n",
+    "\n",
+    "```\n",
+    "{% if kenny %}\n",
+    "\n",
+    "    {% if kenny.sick %}\n",
+    "        Kenny is sick.\n",
+    "    {% elif kenny.dead %}\n",
+    "        You killed Kenny!  You bastard!!!\n",
+    "    {% else %}\n",
+    "        Kenny looks okay --- so far\n",
+    "    {% endif %}\n",
+    "\n",
+    "{% endif %}\n",
+    "```\n",
+    "\n",
+    "## [Loops](http://jinja.pocoo.org/docs/dev/templates/#for) - `{% for %}`\n",
+    "\n",
+    "Template loops are pretty much similar to Python loops, with only a few differences. Within a for-loop block, a special loop variable is accessible:\n",
+    "\n",
+    "![loop](./Images/loop.png)\n",
+    "\n",
+    "> _Unlike in Python, it’s not possible to break or continue in a loop. You can, however, filter the sequence during iteration, which allows you to skip items. The following example skips all the users which are hidden:_\n",
+    "\n",
+    "```\n",
+    "{% for user in users if not user.hidden %}\n",
+    "    <li>{{ user.username|e }}</li>\n",
+    "{% endfor %}\n",
+    "```\n",
+    "\n",
+    "> _If no iteration took place because the sequence was empty or the filtering removed all the items from the sequence, you can render a default block by using else:_\n",
+    "\n",
+    "```\n",
+    "<ul>\n",
+    "{% for user in users %}\n",
+    "    <li>{{ user.username|e }}</li>\n",
+    "{% else %}\n",
+    "    <li><em>no users found</em></li>\n",
+    "{% endfor %}\n",
+    "</ul>\n",
+    "```\n",
+    "\n",
+    "> _Note that, in Python, else blocks are executed whenever the corresponding loop did not break. Since Jinja loops cannot break anyway, a slightly different behavior of the else keyword was chosen._\n",
+    "\n",
+    "## [Macro](http://jinja.pocoo.org/docs/dev/templates/#macros) and [Call](http://jinja.pocoo.org/docs/dev/templates/#call)\n",
+    "\n",
+    "There are also ways to define functions in the templates for programming your template."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
