--- a/Intermediate_2/15. Web Development Template Engine - Jinja2.ipynb
+++ b/Intermediate_2/15. Web Development Template Engine - Jinja2.ipynb
@@ -273,7 +273,7 @@
     "\n",
     "## [Macro](http://jinja.pocoo.org/docs/dev/templates/#macros) and [Call](http://jinja.pocoo.org/docs/dev/templates/#call)\n",
     "\n",
-    "There are also ways to define functions in the templates for programming your template."
+    "There are also ways to define functions in the templates with macro and call for programming reusable behavior."
    ]
   }
  ],
