changed notebook titles

--- a/Intermediate_2/15. Web Development - Template Engine - Jinja2.ipynb
+++ b/Intermediate_2/15. Web Development - Template Engine - Jinja2.ipynb
@@ -275,6 +275,52 @@
     "\n",
     "There are also ways to define functions in the templates with macro and call for programming reusable behavior."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercise:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Create a Flask app:\n",
+    "\n",
+    "- Theme is an upcoming real or imaginary product\n",
+    "- Create a Product class with the following attributes:\n",
+    "    - Name\n",
+    "    - Features (at least 3)\n",
+    "    - Release date\n",
+    "- Name is a string, Features is a list of strings, Release date is a datetime.date instance\n",
+    "- For now, values are hardcoded\n",
+    "\n",
+    "- Only one page\n",
+    "- Page should prominently display the name of the product\n",
+    "- Page should list the features of the product\n",
+    "- When the date is equal to or after the release date, a \"Buy now\" button should appear (It can link to anywhere)\n",
+    "\n",
+    "- Page should include a \"Subscribe to our mailing list\" form with the field:\n",
+    "    - Email address\n",
+    "- Page should include a \"Contact us\" form with the fields:\n",
+    "    - Name\n",
+    "    - Email address\n",
+    "    - Subject\n",
+    "    - Content\n",
+    "- Page should flash a message confirming the submitted form\n",
+    "\n",
+    "Submitted form data should be validated accordingly.\n",
+    "Invalid forms should not be accepted and return the respective errors.\n",
+    "Valid forms should print the submitted info to the console.\n",
+    "\"\"\""
+   ]
   }
  ],
  "metadata": {
